# SpamDeleter

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.readme_rebuilder/: analysis.json
spam_deleter/: __main__.py  cleaner.py  config.py  connector.py  logger.py  scheduler.py
