[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "spam_deleter"
version = "1.0.0"
description = "CLI tool para eliminar correos SPAM automaticamente via IMAP"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0",
    "schedule>=1.2",
]

[project.optional-dependencies]
oauth2-google = ["google-auth-oauthlib>=1.2"]
oauth2-microsoft = ["msal>=1.28"]

[project.scripts]
spam-deleter = "spam_deleter.__main__:main"

[tool.setuptools.packages.find]
include = ["spam_deleter*"]
